--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "sequelize": "^6.21.4"
   }
 }
